公職人員選舉罷免法 1989.1.26

--- a/行政-內政/公職人員選舉罷免法.md
+++ b/行政-內政/公職人員選舉罷免法.md
@@ -2,13 +2,13 @@
 
 * 2 本法所稱公職人員，指左列人員：一、中央公職人員：國民大會代表、立法院立法委員、監察院監察委員。二、地方公職人員：省（市）議會議員，縣（市）議會議員，鄉（鎮、市）民代表會代表，縣（市）長，鄉（鎮、市）長，村、里長。
 
-* 3 公職人員選舉，以普通、平等、直接及無記名單記投票法行之。但監察委員選舉，由省（市）議會議員以無記名限制連記投票法行之，其連記人數以不超過應選名額二分之一為限。公職人員罷免，由原選舉區之選舉人以無記名投票法決定之。
+* 3 公職人員選舉，以普通、平等、直接及無記名單記投票法行之。但監察委員選舉，由省（市）議會議員以無記名限制連記投票法行之，其連記人數以不超過應選名額三分之一為限。公職人員罷免，由原選舉區之選舉人以無記名投票法決定之。
 
-> 釋：一、監察委員選舉投票方法，六十九年選舉辦竣後，各方建議改進投票方法，為防止賄選，提高當選人之代表性，爰將監察委員選舉之投票方法改採限制連記法，其連記數以不超過應選名額二分之一為限。二、第二項未修正。
+> 釋：第一項「名額二分之一」修正為「三分之一」。
 
-* 4 選舉人、候選人年齡及居住期間之計算，均以算至投票日前一日為準，並以戶籍登記簿為依據。前項居住期間之起算，以申報戶籍遷入登記之申請日期為準。重行選舉或重行投票者均仍依原投票日計算。
+* 4 選舉人、候選人年齡及居住期間之計算，均以算至投票日前一日為準，並以戶籍登記簿為依據。前項居住期間之起算，以申報戶籍遷入登記之申請日期為準。重行投票者，仍依原投票日計算。
 
-> 釋：依現行第四條之規定居住期間之計算「以投票日前二十日為準」，致現行第十五條第一項所定居住期間「繼續居住六個月以上」之計算，形成六個月二十日，頗多爭議，爰將居住期間之計算修正為「以投票日前一日為準」，並分列三項作文字修正，以杜紛擾。
+> 釋：按「重行選舉」與「重行投票」不同，重行選舉時，應依本法第四十三條規定程序，重行發布選舉公告，辦理候選人登記，編造選舉人名冊等，不宜依原投票日計算居住期間，爰修正第三項刪除「重行選舉或」及「均」六字。
 
 * 5 本法所規定各種期間之計算，依民法之規定。但期間之末日為例假日時，不予延長。
 
@@ -18,9 +18,9 @@
 
 > 釋：一、第一項至第三項未修正。二、第四項文字修正。三、第五項將「中央」修正為「上級」俾兼顧省選舉委員會之監督職權。四、增列第六項，明定辦理選舉期間，直轄市、縣（市）選舉委員會並於鄉（鎮、市、區）設辦理選務單位，以應作業之需要。
 
-* 8 中央選舉委員會隸屬行政院，置委員九人至十五人，由行政院院長提請總統派充之，並指定一人為主任委員；其組織規程由行政院擬定，呈請總統核定之。省選舉委員會置委員五人至二十三人，直轄市選舉委員會置委員七人至十一人，均由中央選舉委員會提請行政院院長派充之，並指定一人為主任委員。縣（市）選舉委員會，置委員五人至九人，由省選舉委員會遴報中央選舉委員會派充之，並指定一人為主任委員。省（市）、縣（市）選舉委員會組織規程，均由中央選舉委員會擬定，報請行政院核定之。各級選舉委員會委員均為無給職、任期三年。但因職務關係派充者，得依其職務異動而改派之。
+* 8 中央選舉委員會隸屬行政院，置委員若干人；其具有同一黨籍者，不得超過委員總額二分之一。委員之任命，由行政院院長提請總統派充之，並指定一人為主任委員。其組織規程由行政院擬定，呈請總統核定之。省（市）選舉委員會隸屬中央選舉委員會，各置委員若干人，由中央選舉委員會提請行政院院長派充之，並指定一人為主任委員。縣（市）選舉委員會隸屬省選舉委員會，各置委員若干人，由省選舉委員會遴報中央選舉委員會派充之，並指定一人為主任委員。省（市）、縣（市）選舉委員會組織規程，均由中央選舉委員會擬定，報請行政院核定之。各級選舉委員會，應依據法令公正行使職權。
 
-> 釋：一、第一項未修正。二、為取消中央、省巡迴監察員，其監察工作由中央、省選舉委員會委員及有關幕僚單位負責辦理，並顧及省選舉委員會選監業務之需要，爰將第二項所定省選舉委員會委員名額修正為「五人至二十三人」，以應實際需要。至中央及直轄市、縣（市）選舉委員會委員名額則維持現制。三、第三項、第四項未修正。四、第五項之後增列但書規定，俾應實際需要。
+> 釋：一、將各級選舉委員會人數修正為「若干人，」並增「其具有同一黨籍者，不得超過委員總額二分之一。委員之任命，」等語。且於各該選舉委員會組織規程中明定其委員人數、無給職及任期等規定，以保持組織架構之彈性。二、明定省（市）選舉委員會隸屬中央選舉委員會，縣（市）選舉委員會隸屬省選舉委員會，以確立地位保持其公正性。三、第一項至第三項，依照前述理由予以修正。
 
 * 9 公職人員罷免，由各級選舉委員會辦理，並準用第七條之規定。
 
@@ -36,9 +36,9 @@
 
 * 14 中華民國國民，年滿二十歲，無左列情事之一者，有選舉權：一、褫奪公權尚未復權者。二、受禁治產宣告尚未撤銷者。
 
-* 15 有選舉權人在其本籍或在各該選舉區繼續居住六個月以上者，為公職人員區域選舉各該選舉區之選舉人。前項本籍，不適用於鄉（鎮、市）民代表、鄉（鎮、市）長、村、里長之選舉。第一項之居住期間，於直轄市、縣（市）、鄉（鎮、市）地方公職人員之選舉，在其行政區域劃分選舉區者，仍以行政區域為範圍計算之。但於選舉區公告後，遷入各該選舉區者，無選舉投票權。
+* 15 有選舉權人在其本籍或在各該選舉區繼續居住六個月以上者，為公職人員區域選舉各該選舉區之選舉人。前項本籍，不適用於鄉（鎮、市）民代表、鄉（鎮、市）長、村、里長之選舉。第一項之居住期間，於直轄市、縣（市）、鄉（鎮、市）地方公職人員之選舉，在其行政區域劃分選舉區者，仍以行政區域為範圍計算之。但於選舉公告發布後，遷入各該選舉區者，無選舉投票權。
 
-> 釋：一、第一項未修正。二、按戶籍法於六十三年七月十七日修正公布後其第二十條第一項第四款經明定：「由他縣遷入居住六個月以上有久住之意思者」應為設籍及除籍之登記，現行條文第二項已無規定必要，爰予刪除。三、查戶籍法第六條規定：「中華民國人民之本籍以其所屬之省及縣為依據。」本法施行細則第七條第一項亦有明文。於鄉（鎮、市）之選舉，當然不得以本籍之規定取得選舉權，爰修正增列第二項規定如上。四、查現行法第十五條對居住期間，規定以選舉區為範圍，按地方民意代表之選舉，向以行政區域為計算居住期間之範圍，故增列第三項前段。惟為維護選舉秩序與公平競爭，並增列但書規定。
+> 釋：鑒於第三項但書「但於選舉區公告後，遷入各該選舉區者，無選舉投票權。」所稱之「選舉區公告」，係指第四十三條第一項第一款「選舉公告」中所載明「選舉區之劃分」而言。並不包括第四十二條但書「但選舉區有變更時，應於公職人員任期或規定之日期屆滿六個月前發布」之變更選舉區之公告。為避免產生疑義，爰將本項但書所定「於選舉區公告後」修正為「於選舉公告發布後」。
 
 * 16 生活習慣特殊國民公職人員選舉，以生活習慣特殊並具有前條資格之有選舉權人為選舉人。職業團體、婦女團體公職人員選舉，以入會滿六個月以上並具有前條資格之有選舉權人為選舉人。監察委員選舉，以省（市）議會議員為選舉人。
 
@@ -48,7 +48,9 @@
 
 * 19 職業團體或婦女團體選舉人，在投票日二十日前喪失其會員資格者，不得參加職業團體或婦女團體選舉。但得依規定參加區域或生活習慣特殊國民選舉。
 
-* 20 選舉人，除另有規定外，應於戶籍所在地投票所投票。職業團體、婦女團體選舉人或投票所工作人員，得在戶籍地或工作地之投票所投票。但職業團體、婦女團體選舉人欲在工作地投票者，應於投票日六十日前，以書面向所屬團體聲明之。監察委員選舉人，應在省（市）議會舉行之選舉會所設置之投票所投票。
+* 20 選舉人，除另有規定外，應於戶籍所在地投票所投票。職業團體、婦女團體選舉人或投票所工作人員，得在戶籍地或工作地之投票所投票。但職業團體、婦女團體選舉人欲在工作地投票者，應於投票日六十日前，以書面向所屬團體聲明之。二種以上公職人員選舉同時辦理時，依規定選擇行使選舉權者，以在同一投票所投票為限。聲明在工作地投票者，亦同。監察委員選舉人，應在省（市）議會舉行之選舉會所設之投票所投票。
+
+> 釋：選舉人投票當日，憑身分證領票一次，並在身分證上只能蓋一個領票戳記，為維持選舉投票秩序，以在同一地投票所投票為限。爰增列第三項。
 
 * 21 選舉人投票時，應憑本人國民身分證領取選舉票。監察委員選舉人應憑議員身分證明領取選舉票。
 
@@ -70,31 +72,43 @@
 
 * 30 選舉人名冊經公開陳列、公告閱讀期滿後，村、里長應即將原冊暨申請更正情形，報由鄉（鎮、市、區）公所轉送戶籍機關查核更正。選舉人名冊經公告更正後即為確定，並由各直轄市、縣（市）選舉委員會公告選舉人人數。
 
-* 31 選舉人年滿二十三歲得登記為公職人員候選人。但監察委員候選人須年滿三十五歲；縣（市）長候選人須年滿三十歲；鄉（鎮、市）長候選人須年滿二十五歲。回復中華民國國籍滿三年，或因歸化取得中華民國國籍滿十年者，得依前項規定，申請登記為候選人。
+* 31 選舉人年滿二十三歲，得於其行使選舉權之選舉區內登記為公職人員候選人。但縣（市）長候選人須年滿三十歲；鄉（鎮、市）長候選人須年滿二十六歲。有選舉權人滿三十五歲，在其本籍或在各該省（市）行政區域內繼續居住六個月以上者，得登記為監察委員候選人。回復中華民國國籍滿三年或因歸化取得中華民國國籍滿十年者，得依前二項規定登記為候選人。
 
-* 32 登記為候選人，應具備左列之學、經歷：一、國民大會代表、立法委員、監察委員候選人須高級中等以上學校畢業，或普通考試以上考試及格，或曾任省（市）議員以上公職一任以上。二、省（市）議員候選人須高級中等以上學校畢業，或普通考試以上考試及格，或曾任縣（市）議員以上公職一任以上。三、縣（市）議員候選人須國民中學以上學校畢業，或丁等特種考試以上考試及格，或曾任鄉（鎮、市）民代表以上公職一任以上。四、鄉（鎮、市）民代表候選人須國民中學以上學校畢業，或丁等特種考試以上考試及格，或曾任鄉（鎮、市）民代表以上公職、村、里長一任以上。五、縣（市）長候選人須專科以上學校畢業或高等考試以上考試及格，並具有行政工作經驗二年以上或曾任縣（市）議員以上之公職二年以上。六、鄉（鎮、市）長候選人須高級中等以上學校畢業或普通考試以上考試及格，並具有行政工作經驗二年以上或曾任鄉（鎮、市）民代表以上之公職二年以上。七、村、里長候選人須國民中學以上學校畢業，或丁等特種考試以上考試及格，或曾任村、里長一任以上。前項各款學、經歷之認定，以檢覈行之。公職候選人檢覈規則由考試院定之。本法施行前，經公職候選人資格檢覈合格者，得不再經檢覈，取得各該公職候選人資格。曾經第一項第一款之一種中央公職人員候選人資格檢覈合格者，取得同款他種中央公職人員及第二款至第四款之候選人資格，曾經第二款公職候選人資格檢覈合格者，取得第三款、第四款候選人資格；曾經第三款公職候選人資格檢覈合格者；取得第四款候選人資格；曾經第五款公職候選人資格檢覈合格者，取得第六款、第七款候選人資格；曾經第六款公職候選人資格檢覈合格者，取得第七款候選人資格。
+> 釋：一、於第一項增訂候選人之登記以其行使選舉權之選舉區為限。且將「二十五歲」修正為「二十六歲」。二、鑒於監察委員之候選人，並不限於監察委員選舉之選舉人，故將其自第一項移出，專列為第二項，並明定其要件。三、原第二項改為第三項，並作文字修正。
 
-> 釋：一、規定各種公職人員候選人，均須具備學、經歷，且須經檢覈合格，並將鄉（鎮、市）民代表、村、里長候選人學歷規定為「國民中學以上學校畢業或丁等特種考試以上考試及格」。二、第一項第一款至第四款增訂曾任同級以上公職一任以上者得登記為候選人之規定，以應需要。三、修正第五款明定縣（市）長候選人除須具備學歷外，並須具有行政工作經驗二年以上，或曾任縣（市）議員以上之公職二年以上，始得登記為縣（市）長候選人。四、修正第六款明定鄉（鎮、市）長候選人除須具備學歷外，並須具有行政工作經驗二年以上，或曾任鄉（鎮、市）民代表以上公職二年以上，始得登記為鄉（鎮、市）長候選人。五、第二項、第三項未修正。六、為使取得較高級公職人員候選人資格檢覈合格者，不須再經檢覈，逕行取得同性質次一職位之公職人員候選資格特增訂第四項規定。
+* 32 登記為候選人，應具備左列之學、經歷：一、國民大會代表、立法委員候選人須高級中等以上學校畢業，或普通考試以上考試及格，或曾任省（市）議員以上公職一任以上。二、監察委員候選人須專科以上學校畢業或高等考試以上考試及格，具有行政、司法工作經驗四年以上；或曾在專科以上學校任教或執行律師、會計師業務四年以上；或曾任省（市）議員以上公職一任以上。三、省（市）議員候選人須高級中等以上學校畢業，或普通考試以上考試及格，或曾任縣（市）議員以上公職一任以上。四、縣（市）議員候選人須國民中學以上學校畢業，或丁等特種考試以上考試及格，或曾任鄉（鎮、市）民代表以上公職一任以上。五、鄉（鎮、市）民代表候選人須國民中學以上學校畢業，或丁等特種考試以上考試及格，或曾任鄉（鎮、市）民代表以上公職、村、里長一任以上。六、縣（市）長候選人須專科以上學校畢業或高等考試以上考試及格，並具有行政工作經驗四年以上；或曾在專科以上學校擔任講師以上教職四年以上；或執行經高等考試及格之專門職業四年以上；或高級中等以上學校畢業或普通考試以上考試及格，並曾任縣（市）議員以上公職一任以上或鄉（鎮、市）長以上公職一任以上。七、鄉（鎮、市）長候選人須國民中學以上學校畢業或普通考試以上考試及格，並具有行政工作經驗四年以上或曾任鄉（鎮、市）民代表以上公職一任以上。八、村、里長候選人須國民小學以上學校畢業，或丁等特種考試以上考試及格，或曾任鄉（鎮、市）民代表、村、里長以上公職一任以上。前項各款學、經歷之認定，以檢覈行之。公職候選人檢覈規則，由考試院定之。本法施行前，經公職候選人資格檢覈合格者，得不再經檢覈，取得各該公職候選人資格。曾經第一項第一款之一種中央公職人員候選人資格檢覈合格者，取得同款他種中央公職人員及第三款至第五款之公職候選人資格；曾經第二款公職候選人資格檢覈合格者，取得第一款及第三款至第五款之公職候選人資格；曾經第三款公職候選人資格檢覈合格者，取得第四款、第五款公職候選人資格；曾經第四款公職候選人資格檢覈合格者，取得第五款公職候選人資格；曾經第六款公職候選人資格檢覈合格者，取得第七款、第八款公職候選人資格；曾經第七款公職候選人資格檢覈合格者，取得第八款公職候選人資格。
+
+> 釋：一、為發揮監察功能，提高監察委員之學、經歷，爰將第一款監察委員候選人之學、經歷予以修正，並移列於第二款。二、原第二款至第七款依序修正為第三款至第八款。三、第一項第六款末「或曾任縣（市）議員以上公職四年以上」修正為「或高級中等以上學校畢業或普通考試以上考試及格，並曾任縣（市）議員以上公職一任以上或鄉（鎮、市）長以上公職一任以上」等語。四、第一項第七款「公職四年以上」修正為「公職一任以上」。五、第一項第八款「國民中學」修正為「國民小學」。六、鑒於曾任村、里長一任以上者，得登記為鄉（鎮、市）民代表候選人故於第八款增列曾任鄉（鎮、市）民代表、村、里長以上公職一任以上者，亦得申請登記為村、里長候選人，以資配合。七、第四項配合第一項各款之修正，予以調整，並作文字修正。
 
 * 33 二種以上公職人員選舉同時辦理時，申請登記為候選人者，以登記一種為限。同種公職人員選舉具有二個以上之候選人資格者，以登記一個為限。同時為二種或二個以上候選人登記時，其登記無效。
 
-* 34 有左列情事之一者，不得登記為候選人：一、曾因內亂、外患行為犯罪，經判刑確定者。二、曾因貪汙行為犯罪，經判刑確定者。三、曾犯第八十七條至第九十一條之罪或刑法第一百四十二條、第一百四十四條之罪經判刑確定者。四、犯前三款以外之罪，判處有期徒刑以上之刑確定，尚未執行或執行未畢者。但受緩刑宣告，不在此限。五、受保安處分宣告確定，尚未執行或執行未畢者。六、受破產宣告確定，尚未復權者。七、依法停止任用或受休職處分，尚未期滿者。八、褫奪公權，尚未復權者。九、受禁治產宣告，尚未撤銷者。
+* 34 有左列情事之一者，不得登記為候選人：一、曾犯內亂、外患罪，經判刑確定者。二、曾犯貪污罪，經判刑確定者。三、曾犯第八十七條至第九十一條之罪或刑法第一百四十二條、第一百四十四條之罪，經判刑確定者。四、犯前三款以外之罪，判處有期徒刑以上刑之確定，尚未執行或執行未畢者。但受緩刑宣告者，不在此限。五、受保安處分或感訓處分之裁判確定，尚未執行或執行未畢者。六、受破產宣告確定，尚未復權者。七、依法停止任用或受休職處分，尚未期滿者。八、褫奪公權，尚未復權者。九、受禁治產宣告，尚未撤銷者。
 
-> 釋：一、第一款、第二款未修正。二、為防止賄選，端正選風，特增列第三款。三、第四款係就現行第三款文字修正移列。四、據建議並參酌以往地方選舉法規規定，增列第五款「通緝有案尚未撤銷者」。五、第六款至第十款係由現行第四款至第八款移列。
+> 釋：第五款增列受感訓處分之裁判確定，尚未執行或執行未畢者，亦不得登記為候選人，以期周延。
 
-* 35 左列人員不得申請登記為候選人：一、現役軍人或警察。二、現在學校肄業學生。三、辦理選舉事務人員。前項第一款之現役軍人，屬於後備軍人或國民兵應召者，在應召未入營前，或係教育、勤務及點閱召集，均不受限制。現任公務人員不得在其任所所在地，申請登記為國民大會代表候選人。
+* 35 左列人員不得申請登記為候選人：一、現役軍人或警察。二、現在學校肄業學生。三、辦理選舉事務人員。前項第一款之現役軍人，屬於後備軍人或國民兵應召者，在應召未入營前，或係教育、勤務及點閱召集，均不受限制。第一項第二款之現在學校肄業學生，屬於現職公職人員再行進修者，得申請登記為候選人。現任公務人員不得在其任所所在地，申請登記為國民大會代表候選人。
+
+> 釋：為鼓勵現職公職人員之研究進修，以提高服務品質，爰增訂第三項，明定經辦理休學者，於再次競選時，得申請登記為候選人，不受第一項第二款之限制。
+
+* 35.1 依法設立之政黨，得推薦候選人參加公職人員選舉。經推薦之候選人，應檢附政黨推薦書向選舉委員會登記。
+
+> 釋：明定政黨得推薦候選人參加公職人員選舉及登記之手續。
 
 * 36 候選人名單公告後，經發現候選人在公告前或投票前有左列情事之一者，投票前由選舉委員會撤銷其候選人登記；當選後依第一百零三條之一規定提起當選無效之訴：一、候選人資格不合第三十一條規定或候選人檢覈合格資格被撤銷者。二、有第三十四條或第三十五條第一項、第三項之情事者。三、依第八十五條第一項規定不得登記為候選人者。
 
 > 釋：一、本條將前段所定：「當選後由選舉委員會向法院提起當選無效之訴」修正為「當選後依第一百零三條之一規定提起無效之訴。」俾與本法「選舉訴訟」之規定相配合。二、將第二款改列為第一款並增列「候選人資格不合第三十一條規定或」等字，俾候選人資格不合積極要件者，亦得依本條規定處理。三、第三款未修正。
 
-* 37 經申請登記為候選人者，於登記期間截止後，不得撤回其候選人登記；在登記期間截止前經撤回登記者，不得再申請同一種類公職人員候選人登記。
+* 37 經登記為候選人者，於登記期間截止後，不得撤回其候選人登記；在登記期間截止前經撤回登記者，不得再申請同一種類公職人員候選人登記。經政黨推薦之候選人，政黨得於登記期間截止前，撤回其推薦。經登記為候選人者，於登記期間截止後，遷出其選舉區或除籍或喪失職業團體或婦女團體會員資格者，不影響其候選人資格，並仍在原選舉區或各該團體行使選舉權。
 
-* 38 登記為侯選人時應繳納保證金；其數額由選舉委員會視實際需要預計，先期公告。但村、里長侯選人得免繳納。前項保證金應於公告當選人名單後十日內發還。但監察委員選舉候選人為零票；其他選舉未當選之候選人，得票不足各該選舉區應選出名額除該選舉區選舉人總數所得商數百分之十者，不予發還。
+> 釋：一、明定政黨於推薦候選人參加公職人員選舉後，在登記期間截止前，政黨亦得撤回其推薦，爰增訂第二項。二、增訂第三項，避免以遷出選舉區等手段，達到退出選舉之目的，以端正選風。
 
-> 釋：一、第一項刪除監察委員得免繳保證金之規定，以防止候選人濫行登記。二、第二項增加有關監察委員得所繳保證金不予發還標準之規定。並將本法施行細則第三十九條第二項規定予以納入。
+* 38 登記為候選人時應繳納保證金；其數額由選舉委員會先期公告。但村、里長候選人免予繳納。政黨推薦之候選人，其保證金減半繳納。但政黨撤回推薦者，應全額繳納。前二項保證金應於公告當選人名單後十日內發還。但監察委員選舉候選人為零票；其他選舉未當選之候選人，得票不足各該選舉區應選出名額除該選舉區選舉人總數所得商數百分之十者，不予發還。
 
-* 39 公職人員選舉，其選舉區依左列規定：一、國民大會代表由直轄市及縣（市）選出者，以其行政區域為選舉區。二、立法委員由省（市）選出者，以其行政區域為選舉區，並得在其行政區域內劃分選舉區。三、監察委員由省（市）議會選出者，以省（市）議會為選舉區。四、省議員由縣（市）選出者，以其行政區域為選舉區；直轄市議員選舉以其行政區域為選舉區，並得在其行政區域內劃分選舉區。五、縣（市）議員，鄉（鎮、市）民代表選舉以其行政區域為選舉區，並得各在其行政區域內劃分選舉區。六、縣（市）長，鄉（鎮、市）長，村里長選舉各依其行政區域為選舉區。
+> 釋：一、第一項刪除「視實際需要預計」等字，並將「得免繳納」修正為「免予繳納」。二、明定經政黨推薦之候選人減半繳納保證金，以示優惠。但政黨撤回推薦者，仍應全額繳納，爰增訂第二項。
+
+* 39 公職人員選舉，其選舉區依左列規定：一、國民大會代表由直轄市及縣（市）選出者，以其行政區域為選舉區，並得在其行政區域內劃分選舉區。二、立法委員由省（市）選出者，以其行政區域為選舉區，並得在其行政區域內劃分選舉區。三、省議員由縣（市）選出者，以其行政區域為選舉區；直轄市議員選舉以其行政區域為選舉區，並得各在其行政區域內劃分選舉區。四、縣（市）議員，鄉（鎮、市）民代表選舉以其行政區域為選舉區，並得各在其行政區域內劃分選舉區。五、縣（市）長，鄉（鎮、市）長，村、里長選舉各依其行政區域為選舉區。
+
+> 釋：一、監察委員選舉區已規定於第三十一條第二項，爰將本條第三款刪除。以下款次遞移。二、有關選舉區之規定，凡民意代表選舉均得在其行政區域內劃分選舉區，爰將國民大會代表及省議員選舉部分修正。
 
 * 40 國民大會代表、立法委員由職業團體選出者，以同類職業團體為選舉區。國民大會代表由婦女團體選出者，以省（市）婦女團體為選舉區。
 
@@ -102,9 +116,9 @@
 
 > 釋：一、為便於山胞選出之省（市）議員，在省（市）行政區域內劃分選舉區，分區選舉，將現行條文第一款之省（市）議員選舉區劃分之規定，移列第二款。二、第二款後段酌作修正，俾山胞選出之省（市）議員、縣（市）議員、鄉（鎮、市）民代表，其選舉區之劃分較具彈性。
 
-* 42 第三十九條第二款、第四款及第四十一條第一款、第二款之省（市）議員選舉選舉區，由中央選舉委員會劃分之；第三十九條第五款及第四十一條第二款之縣（市）議員、鄉（鎮、市）民代表選舉選舉區，由各該選舉委員會劃分之，並應於發布選舉公告時公告。但選舉區有變更時，應於公職人員任期或規定之日期屆滿六個月前發布之。
+* 42 第三十九條第一款至第三款、第四十一條第一款、第二款之省（市）議員選舉區，由中央選舉委員會劃分之；第三十九條第四款及第四十一條第二款之縣（市）議員選舉區，由省選舉委員會劃分之；第四十一條第二款之鄉（鎮、市）民代表選舉區，由縣選舉委員會劃分之；並應於發布選舉公告時公告。但選舉區有變更時，應於公職人員任期或規定之日期屆滿六個月前發布之。前項選舉區，應斟酌行政區域、人口分布、地理環境、交通狀況及應選出名額劃分之。
 
-> 釋：一、配合第四十一條將原列於第一款之省（市）議員山胞之選舉修正改列於第二款之修正，於「第四十一條第一款」之下，增加「暨第二款省（市）議員選舉」一段，並酌作文字修正。二、選舉區之劃分，對候選人有切身利害，因此選舉區若有所變更時，公告日期亦不予改變，則時間短促，對候選人影響甚大，為適應實際需要，爰於條末增加但書。
+> 釋：一、第一項配合第三十九條及第四十條第一項之修正，予以修正。「六個月」修正為「二年」。二、為明確訂定劃分選舉區準則，爰增列第二項。
 
 * 43 選舉委員會應依左列規定期間發布各種公告：一、選舉公告，須載明選舉種類、名額、選舉區之劃分、投票日期及投票起、止時間。並應於公職人員任期或規定之日期屆滿四十日前發布之。但重行選舉、重行投票或補選之公告日期不在此限。二、候選人登記，應於投票日二十日前公告，其登記期間不得少於五日。但鄉（鎮、市）民代表、鄉（鎮、市）長、村、里長之選舉不得少於三日。三、選舉人名冊，應於投票日十五日前公告，其公告期間不得少於五日。四、候選人名單，應於競選活動開始前一日公告。五、選舉人人數，應於投票日三日前公告。六、當選人名單，應於投票日後七日內公告。前項第二款候選人登記期間截止後，如有選舉區無人登記時，得就無人登記之選舉區，公告辦理第二次候選人登記，其登記期間，不得少於二日。
 
@@ -118,21 +132,29 @@
 
 > 釋：一、為放寬監察委員競選活動之限制，爰於第一項第一款增列「監察委員」之競選活動期間為十五天並將第二項刪除。二、第二項係就現行第三項文字修正移列。
 
-* 45.1 各種公職人員競選經費最高限額，應由選舉委員會訂定，並於發布選舉公告之日同時公告之。前項競選經費最高限額，應斟酌公職人員選舉種類、法定競選活動項目訂定基本金額；並以選舉區應選名額除選舉區人口總數，乘基本金額及物價指數計算之。其計算公式如左：競選經費最高限額＝（選舉區人口總數÷選舉區應選名額）×基本金額×物價指數
+* 45.1 各種公職人員競選經費最高限額，應由選舉委員會訂定，並於發布選舉公告之日同時公告之。前項競選經費最高限額，應依公職人員選舉種類、競選活動期間，斟酌選舉區面積、交通狀況，競選活動項目及必需費用，並參照物價指數，訂定基本金額；而以選舉區應選出名額除選舉區人口總數，乘基本金額計算之。
 
-> 釋：一、本條新增。二、本條規定由選舉委員會依各種因素訂定公職人員選舉競選經費最高限額，提倡節約，端正選舉風氣，並開公平參與競選之門。三、另鑒於鄉（鎮、市）民代表、村、里長選舉為基層選舉，選舉區範圍狹小，花費較少，尚無訂定最高限額必要，爰於第一項但書明定其旨。
+> 釋：現行條文第二項所定競選經費最高限額之計算公式，予以刪除，並按實務經驗予以修正。
 
-* 45.2 候選人不得接受左列競選經費之捐助：一、外國團體、法人或個人之捐助。二、同一種選舉其他侯選人之捐助。
+* 45.2 候選人不得接受左列競選經費之捐助：一、外國團體、法人、個人或主要成員為外國人之團體、法人之捐助。二、同一種選舉其他候選人之捐助。
 
-> 釋：一、本條新增。二、為防止（一）外國透過金錢干預本國選舉；（二）候選人為他日政治上之利益變相助選，爰增列不得接受競選經費捐助。
+> 釋：配合「非常時期人民團體組織法」修正草案，爰於第一款增列「或主要成員為外國人之團體、法人」等字。
 
 * 45.3 候選人應設競選經費收支帳簿，並由其本人或指定人員負責記帳保管，以備查考。前項候選人應於投票日後三十日內，檢同競選收支結算申報表，向選舉委員會申報競選經費收支結算，並應由本人或指定記帳人員簽章負責。選舉委員會對前項所申報競選經費之支出，有事實足認其有不實者，得要求檢送支出憑據或證明文件，以憑查核。競選經費支出憑據、證明文件等，應於申報後保管六個月。但於發生訴訟時，應保管至判決確定後三個月。競選經費查核準則，由中央選舉委員會定之。
 
 > 釋：一、本條新增。二、第一項規定候選人應設置競選經費收支帳簿，以備查考。三、第二項規定第一項所指候選人應向選舉委員會申報競選經費結算限期及應繳交之報表、帳簿。四、第三項規定選舉委員會對於競選經費之支出有不實者，得要求檢送有關支出憑據或證明文件。五、第四項規定保存有關競選經費收支憑據、證明文件等之期限，俾利查核。
 
-* 46 競選活動之項目如左：一、設競選辦事處、置助選員。二、舉辦政見發表會。三、印發名片、傳單。四、使用宣傳車輛及擴音器。五、訪問選舉區內選民。前項第一款、第四款於監察委員選舉不適用之。候選人競選辦事處及助選員設置辦法，由中央選舉委員會定之。
+* 45.4 候選人之競選經費，於第四十五條之一規定最高限額內而非接受捐贈者，得於申報所得稅時作為當年度列舉扣除額。個人對於候選人競選經費之捐贈，不得超過新臺幣二萬元；其為營利事業捐贈者，不得超過新臺幣三十萬元。候選人接受競選經費捐贈之總額，不得超過第四十五條之一規定之競選經費最高限額。個人對於依法設立政黨之捐贈，不得超過綜合所得總額百分之二十，其總額並不得超過新臺幣二十萬元；其為營利事業捐贈者，不得超過所得額百分之十，其總額並不得超過新臺幣三百萬元。前二項之捐贈，個人得於申報所得稅時，作為當年度列舉扣除額；其為營利事業捐贈者，得列為當年度之費用或損失。營利事業連續虧損三年以上者，不得捐贈競選經費。
 
-> 釋：一、本條係就現行第四十六條及第四十八條合併修正。二、第一項係就現行第四十八條移列並作左列修正：（一）增列「設競選辦事處、置助選員」一款為競選活動項目之一，並列為第一款，原第一款改列為第二款。（二）原第二款「印發選舉公報」，因係由選務機關辦理，且現行第五十條已有明定，故予刪除。三、增列第二項，規定監察委員候選人不得設競選辦事處、置助選員、懸掛或豎立標語及使用宣傳車輛、播音器。
+> 釋：為使競選經費來源正常化及鼓勵參與起見，爰斟酌外國立法例並參照所得稅法之規定，明定候選人之競選經費及對於候選人競選經費及依法設立政黨之捐款，在一定額度內得列為當年綜合所得扣除額或當年費用或損失。
+
+* 45.5 公職人員候選人得票超過各該選舉區最低當選票數四分之三以上者，應補貼其競選費用，每票補貼新臺幣十元。但其最高額不得超過各該選舉區候選人競選經費最高限額。前項最低當選票數之當選人，如以婦女保障名額當選，應以前一名當選人之得票數為最低當選票數。第一項所需補貼費用，由各級選舉委員會依法編列預算。
+
+> 釋：本條新增。旨在規定公費競選，以淨化政風。
+
+* 46 候選人於競選活動期間，除監察委員選舉外，得在其選舉區設立競選辦事處及置助選員。候選人競選辦事處及助選員設置辦法，由中央選舉委員會定之。
+
+> 釋：一、對於競選活動之規範，已明確採取列舉禁止主義立法，爰合併修正第一、二項為第一項。二、現行條文第三項改列為第二項。
 
 * 47 左列人員不得擔任助選員：一、已登記之候選人。二、公務人員。三、有第三十四條、第三十五條第一項各款情事之一者。一人不得擔任二以上候選人之助選員。
 
@@ -144,15 +166,21 @@
 
 > 釋：一、第一項係將現行第四十五條第二項所定監察委員候選人不得舉辦自辦政見發表會之規定予以納入。二、村、里長選舉為基層之選舉，其選舉區範圍狹小，候選人之為人處事已為選民所熟悉。且同額競選時，實無辦理公辦政見會之必要。爰於第二項增列但書規定，俾符實際需要。三、為使候選人有較充裕之時間以安排自辦政見發表會之時間及地點起見，爰將「三日」改為「二日」。四、第四項於首句「舉辦政見發表」下加一「會」字俾求明確。
 
-* 50 選舉委員會應彙集各候選人之政見、號次、相片、姓名、年齡、性別、本籍、黨籍、學歷、經歷、職業、住址及選舉投票等有關規定，編印選舉公報，於投票日二日前分送選舉區內各戶，並分別張貼適當地點。前項候選人政見及個人資料，候選人應於申請登記為候選人時，一併繳送選舉委員會。候選人政見內容，如有違背第五十四條規定者，選舉委員會應通知候選人限期自行修改；不修改者，對違背規定部分不予刊登公報；候選人個人資料不實者亦同。選舉委員會得視實際需要，透過大眾傳播工具，辦理其他競選活動。
+* 50 選舉委員會應彙集各候選人之政見、號次、相片、姓名、年齡、性別、本籍、出生地、黨籍、學歷、經歷、職業、住址及選舉投票等有關規定，編印選舉公報，並應於投票日二日前送達選舉區內各戶或監察委員之選舉人，並分別張貼適當地點。前項候選人政見及個人資料，候選人應於申請登記為候選人時，一併繳送選舉委員會。候選人政見內容，如有違背第五十四條規定者，選舉委員會應通知候選人限期自行修改，逾期不修改或修改後仍有違背規定者，對違背規定部分不予刊登公報。候選人個人資料，由候選人自行負責。其個人資料為選舉委員會職務上所已知或經查明不實者，不予刊登公報。經所屬政黨推薦之候選人刊登其政黨推薦，未經所屬政黨推薦或經政黨推薦後撤回之候選人，刊登其黨籍。選舉委員會得視實際需要，選定公職人員選舉種類，透過電視或其他大眾傳播工具，辦理選舉活動。
 
-* 51 候選人印發傳單，應親自簽名。名片、傳單除由選舉委員會提供或指定地點外，不得張貼。前項名片、傳單之規格，由中央選舉委員會規定之。
+> 釋：一、第一項中「本籍」下增「出生地、」三字；後段修正為「編印選舉公報，並應於投票日二日前送達選舉區內各戶或監察委員之選舉人．．．．」，以應需要。二、現行條文第二項前段「前項候選人政見及個人資料，候選人應於申請登記為候選人時，一併繳送選舉委員會」修正列為第二項。三、現行條文第二項後段有關候選人政見內容之規定修正列為第三項。其中「不修改者，對違背規定部分不予刊登公報」修正為「逾期不修改或修改後仍有違背規定者，對違背規定部分不予刊登公報。」以利選務工作。四、現行條文第二項有關候選人個人資料不實不予刊登公報之規定，修正列為第四項，並增訂候選人個人資料由候選人自行負責。後段「未經所屬政黨．．．．」上增「經所屬政黨推薦之候選人刊登其政黨推薦，」；「不刊登其黨籍」修正為「刊登其黨籍」。五、現行條文第三項移列為第五項，並為順應擴大公費選舉之建議，予以修正。
 
-> 釋：一、現行第一項所定「名片」與一般個人使用「名片」不易區別；為防止印發惡意攻訐之無頭傳單，宜由候選人親自簽名，以保障候選人之權益。二、為維護選舉秩序及環境清潔，爰於第二項明定名片、傳單及標語不得張貼。三、為使名片、傳單整齊劃一，以便張貼，爰增訂第三項。
+* 51 候選人印發以文字、圖畫從事競選之宣傳品，應親自簽名。前項競選之宣傳品，除由選舉委員會提供或指定地點外，不得張貼。張貼之宣傳品，其規格由中央選舉委員會定之。候選人懸掛或豎立標語、看板、旗幟、布條等廣告物，除設置於宣傳車輛者外，以其競選辦事處三十公尺內之範圍為限。
 
-* 52 候選人為競選活動使用宣傳車輛之數量，每人不得超過五輛。但以直轄市或縣（市）為其選舉區者，每人不得超過三輛，以鄉（鎮、市）為其選舉區者，每人不得超過二輛。前項宣傳車輛，應懸掛選舉委員會製發之旗幟。候選人為競選活動使用之擴音器，以裝置於宣傳車輛、自辦政見發表會場或競選辦事處為限，並不得妨害其他候選人發表政見。
+> 釋：一、為使候選人對於競選活動期間印發之文宣物品負責，爰將第一項配合修正。二、配合第一項之修正，將第二、三項合併修正為第二項。三、為應候選人競選活動之實際需要爰增訂第三項。
 
-> 釋：一、為節省競選費用，並符實際需要，爰將第一項所定候選人競選活動使用宣傳車輛之數量酌予減少。二、第二項未修正。三、現行第五十五條第八款規定，移列本條第三項之末，並酌作修正。
+* 51.1 政黨於競選活動期間，得為其所推薦之候選人舉辦政見發表會及印發宣傳品。前項政見發表會，除候選人及其助選員外，由政黨向選舉委員會報備之人員，亦得在場演講。政黨印發之宣傳品，應載明政黨名稱。第一項之政見發表，應於自辦政見發表會期間內舉辦，並準用第四十九條第三項及第四項之規定。
+
+> 釋：明定政黨於競選活動期間得為其所推薦之候選人印發宣傳品，並得於候選人舉辦自辦政見發表會期間內為其所推薦之候選人舉辦政見發表會。
+
+* 52 候選人於競選活動期間，除監察委員選舉外，得使用宣傳車輛及擴音器。候選人為競選活動使用宣傳車輛，應懸掛選舉委員會製發之旗幟，其數量每人不得超過五輛。但以直轄市或縣（市）為其選舉區者，每人不得超過三輛；以鄉（鎮、市）為其選舉區者，每人不得超過二輛；以村、里為其選舉區者，每人不得超過一輛。候選人為競選活動使用之擴音器，以裝置於宣傳車輛、自辦政見發表會場或競選辦事處為限，並不得妨害其他候選人發表政見。
+
+> 釋：一、配合第四十六條之修正，爰增列第一項。二、現行條文第一、二項合併修正為第二項，文字酌作修正並將本法施行細則第五十四條第一項，有關村、里長選舉時使用車輛數之規定，改列入本條第二項末段，以期周延。
 
 * 53 （刪除）
 
@@ -160,19 +188,25 @@
 
 * 54 候選人或其助選員競選言論，不得有左列情事：一、煽惑他人犯內亂罪或外患罪。二、煽惑他人以暴動破壞社會秩序。三、觸犯其他刑事法律規定之罪。
 
-* 55 候選人或其助選員競選活動，不得有左列情事：一、在政見發表會外，另行公開演講。二、競選辦事處或助選員之設置，不合法令規定。三、於規定期間或每日起、止時間之外從事競選活動。四、聯合舉辦自辦政見發表會。五、結眾遊行。六、超越各該選舉區，從事競選活動。七、發起選舉人簽名或利用大眾傳播工具刊登廣告從事競選活動。八、從事第四十六條規定項目以外之競選活動。九、燃放鞭炮。
+* 55 候選人或其助選員競選活動，不得有左列行為：一、在政見發表會外，另行公開演講。二、於規定期間之每日起、止時間外從事公開競選活動。三、結眾遊行。四、發動選舉人簽名或於廣播、電視播送廣告，從事競選活動。五、燃放鞭炮。
 
-> 釋：一、第一款係就現行條文第三款修正移列。二、現行條文第一款、第二款，依次遞改為第二款、第三款。三、為維護選舉秩序，增列「聯合舉辦自辦政見發表會」為第四款。四、原第四款改列為第五款。五、原第五款改為第六款並酌作文字修正。六、原第七款刪除，以切合實際，並免形同具文。七、為節省選舉經費，並維護選舉程序，爰增列第七款規定如上。八、原第八款刪除，移列第五十二條第三項。九、原第六款改為第八款。十、為免在競選期間，燃放鞭炮影響治安及環境清潔，爰增列第九款。
+> 釋：一、現行條文第一項後段「情事」二字修正為「行為」。二、另鑒於候選人或其助選員如在政見發表會或競選辦事處外公開播放演講之錄影、錄音，其效果與公開演講無異，有禁止之必要，爰增訂於第五款，加以規範。三、現行條文第二款於修正條文第四十六條已有規範，故予刪除。四、第三款及第五款刪除。五、第四款及第六款改為第三款及第四款並增列第五款「燃放鞭炮」。六、為配合候選人得利用報紙、雜誌刊登廣告從事競選活動，現行條文第七款酌予修正，並移列為第六款。七、現行條文第八款配合第四十六條之修正，予以刪除。
 
-* 56 競選活動期間，除候選人及其助選員依本法規定從事競選活動外，任何人不得有左列之行為：一、公開演講為候選人宣傳。二、自行製作或張貼傳單、標語、壁報為候選人宣傳。三、以未經許可為競選活動使用之宣傳車輛或擴音器為候選人宣傳。四、結眾遊行為候選人宣傳。五、發動選舉人簽名或利用大眾傳播工具刊登廣告為候選人宣傳。六、為候選人燃放鞭炮。
+* 55.1 競選活動期間，政黨不得有左列行為：一、在政見發表會外，公開演講為候選人宣傳。二、設立競選辦事處及置助選員。三、使用宣傳車輛或於政見發表會外使用擴音器，為候選人宣傳。四、結眾遊行，為候選人宣傳。五、於政黨辦公處三十公尺範圍外，張貼宣傳品，或懸掛、豎立標語、看板、旗幟、布條等廣告物，為候選人宣傳。六、發動選舉人簽名或於廣播、電視播送廣告，為候選人宣傳。七、燃放鞭炮。
 
-> 釋：一、本條係就現行第五十六條修正。二、鑒於現行法對於「非助選員」除明定不得公開演講為候選人宣傳外，別無限制，以致非助選員之行為影響選舉秩序之維持，爰依各方建議修正增列競選活動期間從事競選活動之限制。三、配合修正條文第五十五條之修正，增列「燃放鞭炮」，俾資周妥。
+> 釋：增訂競選活動期間，政黨不得作為之行為，以資規範。
+
+* 56 競選活動期間，除候選人及其助選員或政黨依本法規定從事競選活動外，任何人不得有左列行為：一、公開演講或公開播放演講之錄影、錄音，為候選人宣傳。二、印發或張貼宣傳品，或懸掛、豎立標語、看板、旗幟、布條等廣告物，為候選人宣傳。三、以未經許可為競選活動使用之宣傳車輛或擴音器，為候選人宣傳。四、結眾遊行，為候選人宣傳。五、發動選舉人簽名或於大眾傳播工具刊播廣告，為候選人宣傳。六、為候選人燃放鞭炮。
+
+> 釋：一、序文末句「左列之行為」修正為「左列行為」。二、競選活動期間，政黨不得作為之行為，已於本法第五十五條之一明定，爰於本條序文明定予以排除。三、第一款配合第五十五條第四款酌予修正。四、第二款配合修正條文第五十一條作文字調整。五、第五款酌作文字修正。
 
 * 57 公職人員選舉，應視選舉區廣狹及選舉人分布情形，就機關、學校、公共場所或其他適當處所，分設投票所。監察委員選舉，於省（市）議會設投票所。投票所於投票完畢後，即改為開票所，當眾唱名開票，開票完畢，開票所主任管理員與主任監察員即以書面宣布開票結果。
 
 * 58 投票所、開票所置主任管理員一人，管理員若干人，由選舉委員會派充，辦理投票、開票工作。
 
-* 59 投票所、開票所置主任監察員一人，監察員若干人，監察投票、開票工作。前項監察員由候選人就所需人數平均推荐，送由選舉委員會審查合格後派充之。候選人得就其所推荐之監察員指定投票所、開票所，執行投票、開票監察工作，如指定之監察員超過該投票所、開票所規定名額時，以抽籤定之。主任監察員及候選人推荐不足額之監察員，由選舉委員會就左列人員遴派之：一、地方公正人士。二、各機關、團體、學校人員。三、大、專院、校成年學生。監察員推荐及服務規則，由中央選舉委員會定之。
+* 59 投票所、開票所置主任監察員一人，監察員若干人，監察投票、開票工作。前項監察員由候選人就所需人數平均推薦，送由選舉委員會審核派充之。但經政黨推薦之候選人，其監察員之推薦，由所屬政黨為之。候選人或政黨得就其所推薦之監察員指定投票所、開票所，執行投票、開票監察工作，如指定之監察員超過該投票所、開票所規定名額時，以抽籤定之。但投、開票所監察員不得全屬同一政黨。主任監察員及推薦不足額之監察員，由選舉委員會就左列人員遴派之：一、地方公正人士。二、各機關、團體、學校人員。三、大、專院、校成年學生。監察員推薦及服務規則，由中央選舉委員會定之。
+
+> 釋：第二項配合政黨參與選舉推薦投、開票所監察員之規定，予以修正。
 
 * 60 選舉票，應由選舉委員會按選舉區印製分發應用。選舉票上應刊印各候選人之號次、姓名及相片。前項選舉票，應於投票日前一日交各該投票所主任管理員會同主任監察員當眾點清。
 
@@ -190,7 +224,9 @@
 
 * 65 公職人員選舉，按各選舉區應選出之名額，以候選人得票比較多數者為當選；票數相同時，以抽籤決定之。公職人員選舉，有婦女當選名額其當選人少於應行當選名額時，應將婦女候選人所得選舉票單獨計算，以得票比較多數者為當選。
 
-* 66 候選人數未超過或不足各該選舉區應選出之名額時，除監察委員及村、里長選舉仍以得票比較多數者為當選外，應以所得票數達左列規定以上者始為當選：一、國民大會代表、立法委員，省（市）議員，縣（市）議員，鄉（鎮、市）民代表選舉以各該選舉區應選出之名額除該選舉區選舉人總數所得商數百分之二十。二、縣（市）長，鄉（鎮、市）長選舉為各該選舉區選舉人總數百分之二十五。前項選舉結果未能當選或當選不足應選出之名額時，縣（市）長，鄉（鎮、市）長應於投票後一定期間內公告重行選舉；國民大會代表、立法委員，省（市）議員，縣（市）議員，鄉（鎮、市）民代表視同缺額。同一選舉區內缺額達二分之一時，應定期重行選舉。
+* 66 候選人數未超過或不足各該選舉區應選出之名額時，應以所得票數達左列規定以上者始為當選。但監察委員及村、里長選舉不在此限：一、國民大會代表、立法委員、省（市）議員、縣（市）議員、鄉（鎮、市）民代表選舉為各該選舉區應選出之名額除該選舉區選舉人總數所得商數百分之十。二、縣（市）長、鄉（鎮、市）長選舉為各該選舉區選舉人總數百分之二十。前項選舉結果未能當選或當選不足應選出之名額時，縣（市）長、鄉（鎮、市）長應於投票後一定期間內公告重行選舉。國民大會代表、立法委員、省（市）議員、縣（市）議員、鄉（鎮、市）民代表視同缺額；同一選舉區內缺額達二分之一時，應定期補選。
+
+> 釋：一、第二項末句將「應定期重行選舉」，修正為「應定期補選」，使文義明確。二、第一項第一款「二十」修正為「十」。三、第一項第二款「二十五」修正為「二十」。
 
 * 67 當選人在就職前死亡或被判決當選無效者，依左列規定辦理：一、縣（市）長，鄉（鎮、市）長，村、里長應定期重行選舉。二、國民大會代表、立法委員、監察委員，省（市）議員，縣（市）議員，鄉（鎮、市）民代表均視同缺額。同一選舉區內缺額達二分之一時，應定期補選。
 
@@ -234,9 +270,13 @@
 
 * 85 罷免案通過者，被罷免人自解除職務之日起，四年內不得為同一公職人員候選人；其於罷免案宣告成立後辭職者亦同。罷免案否決者，在該被罷免人之任期內，不得對其再為罷免案之提議。
 
-* 86 違反第五十四條第一款之規定者，處七年以上有期徒刑；違反第二款之規定者，處五年以上有期徒刑；違反第三款之規定者，依各該有關處罰之法律處斷。
+* 86 違反第五十四條第一款之規定者，處七年以上有期徒刑；違反第二款之規定者，處五年以上有期徒刑；違反第三款之規定者，依各該有關處罰之法律處斷。政黨舉辦之政見發表會，其在場演講人員之言論，違反第五十四條之規定者，依前項規定處斷。
 
-* 87 利用競選或助選機會，公然聚眾，以暴動破壞社會秩序者，處七年以上有期徒刑，首謀者處無期徒刑或十年以上有期徒刑。
+> 釋：為規範政黨舉辦政見發表會在場演講人員之言論，爰增列第二項。
+
+* 87 利用競選或助選機會，公然聚眾，以暴動破壞社會秩序者，處七年以上有期徒刑；首謀者，處無期徒刑或十年以上有期徒刑。前項之未遂犯罰之。
+
+> 釋：選舉期間，以暴動破壞社會秩序之方式繁多，為加強執行效果，實有處罰未遂犯之必要，爰增訂第二項。
 
 * 87.1 辦理選舉、罷免期間，意圖妨害選舉或罷免，對於公務員依法執行職務時，施強暴脅迫者，處五年以下有期徒刑。犯前項之罪，因而致公務員於死者，處無期徒刑或七年以上有期徒刑；致重傷者，處三年以上十年以下有期徒刑。
 
@@ -246,9 +286,9 @@
 
 > 釋：一、本條新增。二、參照刑法第一百三十六條，將聚眾以暴力妨害選舉或罷免之處罰，納入本法，俾對依法執行職務之公務員有所保障，並維持選舉或罷免之秩序。
 
-* 88 違反第四十五條之二第一款規定接受捐助者，處一年以上七年以下有期徒刑。
+* 88 違反第四十五條之二第一款規定接受捐助者，處五年以下有期徒刑；違反第二款規定接受捐助者，處一年以下有期徒刑、拘役或一萬元以下罰金。犯前項之罪者，其接受捐助所得財物沒收之；如全部或一部不能沒收時，追徵其價額。
 
-> 釋：本條係配合修正條文第四十五條之二規定修正之。
+> 釋：一、違反第四十五條之二第一款或第二款情事者，因犯罪情節有輕重之別，宜分別科以不同之刑責。爰修正如第一項。二、參照「非常時期人民團體組織法」修正草案，增訂第二項，明定接受捐助所得財物沒收之或追徵其價額。
 
 * 89 對於候選人或具有候選人資格者，行求期約或交付賄賂或其他不正利益，而約其放棄競選或為一定之競選活動者，處五年以下有期徒刑，得併科五萬元以下罰金。候選人或具有候選人資格者，要求期約或收受賄賂或其他不正利益，而許以放棄競選或為一定之競選活動者亦同。犯前項之罪者，所收受之賄賂沒收之，如全部或一部不能沒收時，追徵其價額。
 
@@ -270,9 +310,9 @@
 
 > 釋：本條係參照刑法第一百五十條規定，將「著手實施」修正為「下手實施」並酌作文字修正。
 
-* 95 意圖妨害或擾亂投票、開票而抑留、毀壞、調換或奪取投票匭、選舉票、罷免票、選舉人名冊、投票報告表、開票報告表、開票統計或圈選工具者，處五年以下有期徒刑。
+* 95 意圖妨害或擾亂投票、開票而抑留、毀壞、隱匿、調換或奪取投票匭、選舉票、罷免票、選舉人名冊、投票報告表、開票報告表、開票統計或圈選工具者，處五年以下有期徒刑。
 
-> 釋：一、本條第一項增加犯罪主觀構成要件，以明刑責。二、故意抑留、毀壞、調換、奪取「開票統計」者，亦依本條懲處。
+> 釋：選舉人意圖妨害或擾亂投票、開票，於領得選票後，如隱藏不投，則產生發出票數與開出票數不一致之結果；若故意將圈選工具隱藏，使他人無圈選工具可用，則影響投票之進行。故此等行為，均應予以處罰，爰增列「隱匿」二字。
 
 * 95.1 競選經費之支出超出選舉委員會依第四十五條之一第一項規定公告之最高限額者，處一萬元以上五萬元以下罰鍰。
 
@@ -282,13 +322,17 @@
 
 > 釋：一、配合修正條文第四十九條第一項規定意旨，刪除本條引列之「第一項」三字。二、鑒於候選人或其助選員在公辦或私辦政見發表會外，另行公開演講，從事競選活動者，影響競選之公平之秩序，其情節與未經核准自辦政見發表會相同，爰增列違反修正條文第五十五條第一款刑罰之規定。
 
-* 97 違反第四十五條之二第二款、第四十五條之三第一項、第二項、第四項、第五十一條第一項、第二項之規定或依第四十五條之三第五項所定準則或依第五十一條第三項所定規格之規定者，處一千元以上一萬元以下罰鍰。違反第五十二條、第五十五條第二款至第九款、第五十六條第二款至第六款之規定或依第七十九條第三項所定辦法之規定，經監察人員制止不聽者亦同。將選舉票或罷免票以外之物投入票匭，或將領得之選舉票或罷免票攜出場外，或故意撕毀者，處五百元以上五千元以下罰鍰。
+* 96.1 政黨違反第五十一條之一第二項、第四項、第五十五條之一第一款或第五十六條第一款之規定，經監察人員制止不聽者，除行為人依前條規定處罰外，處政黨一萬元以上五萬元以下罰鍰。
 
-> 釋：一、配合修正第三章第五節，將現行第一項分別二項並作左列修正：（一）增列對違反本法關於競選經費規定者之行政罰。（二）修正明定傳單、標語之製作違反修正條文第五十一條第一項第三項規定者，不須經監察人員制止不聽即予行政罰，並增列罰鍰數額之下限規定。（三）明定候選人或助選員違反修正條文第五十五條第二款至第八款各款情事之一及非助選員違反修正條文第五十六條第二款至第五款情事之一，經監察人員制止不聽者之罰鍰處罰。（四）為強化本法關於罷免規定之法效爰於第二項增訂違反依第七十九條第三項所定辦法之規定者之罰鍰處罰規定，以求周妥。二、現行第二項移列第三項並增訂故意撕毀選舉票或罷免票之處罰及罰鍰數額之下限規定。
+> 釋：參照第九十六條規定明定政黨違反第五十一條之二第二項、第四項、第五十五條之一第一款或第五十六條第一款規定之罰則。
 
-* 97.1 自發布選舉公告之日起至第四十五條所定競選活動期間前，任何人為自己或他人從事左列活動之一，經監察人員制止不聽者，處一千元以上一萬元以下罰鍰：一、公開演講或公開集會，從事競選宣傳。二、散發傳單或懸掛、豎立、張貼標語、壁報從事競選宣傳。三、使用宣傳車輛或當眾呼叫從事競選宣傳。
+* 97 違反第四十五條之三第一項、第二項、第四項、第五十一條第一項、第三項、第五十一條之一第三項之規定或依第四十五條之三第五項所定準則或依第五十一條第二項所定張貼地點、規格等之規定者，處一千元以上一萬元以下罰鍰。違反第五十二條第二項、第三項、第五十五條第二款至第五款、第五十五條之一第二款至第七款、第五十六條第二款至第六款、第七十九條第二項之規定或依第四十六條第二項、第七十九條第三項所定辦法之規定，經監察人員制止不聽者，亦同。將選舉票或罷免票以外之物投入票匭，或將領得之選舉票或罷免票攜出場外，或故意撕毀者，處五百元以上五千元以下罰鍰。
 
-> 釋：一、本條新增。二、為維護選舉秩序及公平起見，候選人競選活動應於修正條文第四十五條所規定之期間內為之，以防範所謂「期前活動」。爰參酌六十九年、七十年及七十一年選舉經驗，明定「期前活動」之禁止及其處罰。
+> 釋：一、第一項配合第五十一條、第八十八條規定予以修正，並增列違反第五十一條之一及第五十一條之二第二項規定之罰則。二、第二項配合第五十二條、第五十五條、第五十六條規定予以修正，並增列違反第四十六條第二項、第五十五條之一第二款至第七款及第七十九條第二項規定之罰則。
+
+* 97.1 （刪除）
+
+> 釋：解除戒嚴後，政府一連串的開放作為，在在顯示採行更開放、更彈性的政策。本次修法對任何人競選活動期間前之準備行為不宜予以規範，且其他法律已有規範者，亦不必於選罷法再作規定。爰將現行條文刪除，以資配合。
 
 * 97.2 犯第八十九條第二項之罪或刑法第一百四十三條第一項之罪，於犯罪後三個月內自首者，免除其刑；逾三個月者，減輕或免除其刑；在偵查或審判中自白者，減輕其刑。意圖他人受刑事處分，虛構事實，而為前項之自首者，依刑法誣告罪之規定處罰之。
 
@@ -310,9 +354,9 @@
 
 * 102 選舉或罷免無效之訴，經法院判決無效確定者，其選舉或罷免無效，并定期重行選舉或罷免。其違法屬選舉或罷免之局部者，局部之選舉或罷免無效，並就該局部無效部分定期重行投票。但局部無效部分顯不足以影響選舉或罷免結果者，不在此限。
 
-* 103 當選人有左列情事之一者，選舉委員會、檢察官或同一選舉區之候選人得以當選人為被告，自公告當選人名單之日起十五日內，向該管轄法院提起當選無效之訴：一、當選票數不實，足以影響選舉結果者。二、違反第四十九條第三項或第五十五條第一款、第四款至第六款規定之一經監察人員書面制止不聽者。
+* 103 當選人有左列情事之一者，選舉委員會、檢察官或同一選舉區之候選人得以當選人為被告，自公告當選人名單之日起十五日內，向該管轄法院提起當選無效之訴：一、當選票數不實，足以影響選舉結果者。二、違反第四十九條第三項或第五十五條第一款及第三款之規定，經監察人員書面制止不聽者。
 
-> 釋：一、為配合第三十六條之修正及增訂第一百零三條之一，爰將現行第一款「候選資格不實者」予以刪除。二、第二款移列第一款，文字未修正。三、第三款移列第二款，刪除「第一項」三字，第五十五條註記為第一款、第四款至第六款，並將「不服取締者」修正為「經監察人員書面制止不聽者」，以求妥適。
+> 釋：第二款配合第五十五條之修正予以修正。
 
 * 103.1 當選人有第三十六條各款規定情事之一者，選舉委員會、檢察官或同一選舉區之候選人得以當選人為被告，於其任期或規定之日期屆滿前，向該管轄法院提起當選無效之訴。
 
@@ -326,9 +370,13 @@
 
 * 107 選舉人發覺有構成選舉無效、當選無效或罷免無效、罷免案通過或否決無效之情事時，得於當選人名單或罷免投票結果公告之日起七日內，檢具事證，向檢察官或選舉委員會舉發之。
 
-* 108 選舉、罷免訴訟之管轄法院，依左列之規定：一、國民大會代表、立法委員、監察委員，省（市）議員，縣（市）長之選舉、罷免訴訟，由該管高等法院或其分院管轄。二、縣（市）議員之選舉或罷免無效之訴訟，由該管高等法院或其分院管轄。當選無效、罷免案通過或否決無效之訴訟，由該管地方法院管轄。三、鄉（鎮、市）民代表、鄉（鎮、市）長，村、里長之選舉、罷免訴訟，由該管地方法院管轄。前項各款所稱該管法院，指選舉、罷免行為地之管轄法院。
+* 108 選舉、罷免訴訟之管轄法院，依左列之規定：一、第一審選舉、罷免訴訟，由選舉、罷免行為地之該管地方法院或其分院管轄，其行為地跨連或散在數地方法院或分院管轄區域內者，各該管地方法院或分院俱有管轄權。二、不服地方法院或分院第一審判決而上訴之選舉、罷免訴訟事件，由該管高等法院或其分院管轄。
 
-* 109 選舉、罷免訴訟、設選舉法庭，採合議制審理，並應先於其他訴訟審判之，以一審終結。有左列各款情形之一者，得以再審之訴，對於前項訴訟之確定終局判決，聲明不服：一、有民事訴訟法第四百九十六條第一項規定各款情事之一者。二、原判決就足影響於判決之重要證物漏未斟酌者。三、判決不備理由或理由矛盾者。四、違背言詞辯論公開之規定者。再審之訴，應於裁判送達後二十日之不變期間內提起，不得以再審理由知悉在後或發生於裁判送達後，變更其不變期間之計算。前項訴訟以一次為限，受理法院應於三個月內審結。對於再審之裁判，不得聲明不服。
+> 釋：修正第一至第三款內容，合併為二款；刪除第二項。
+
+* 109 選舉、罷免訴訟，設選舉法庭，採合議制審理，並應先於其他訴訟審判之，以二審終結，並不得提起再審之訴。受理上訴之法院應於三個月內審結。
+
+> 釋：一、第一項文字修正。將現行選舉訴訟一審制改為二審，並規定不得提起再審之訴，以速審速結。二、第二項以下刪除。
 
 * 110 選舉、罷免訴訟程序，除本法規定者外，準用民事訴訟法之規定。但關於捨棄、認諾、訴訟上自認或不爭執事實效力之規定，不在準用之列。
 
